tests/neg-inline-trait/disallow-object-in-inline-trait.scala
inline trait Foo:
    object Bar // error
